--- a/face_de-identification/FrameToVideo.ipynb
+++ b/face_de-identification/FrameToVideo.ipynb
@@ -5,7 +5,48 @@
    "execution_count": 1,
    "id": "86dbe6ef",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Moviepy - Building video ./result.mp4.\n",
+      "MoviePy - Writing audio in resultTEMP_MPY_wvf_snd.mp3\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                                                       \r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MoviePy - Done.\n",
+      "Moviepy - Writing video ./result.mp4\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                                                       \r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Moviepy - Done !\n",
+      "Moviepy - video ready ./result.mp4\n",
+      "end\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "프레임 단위 영상을 동영상으로 변환하는 코드\n",
@@ -18,6 +59,8 @@
     "import numpy as np\n",
     "import glob\n",
     "import os\n",
+    "import moviepy\n",
+    "from moviepy.editor import *\n",
     "\n",
     "resultFps=10\n",
     "img_array = []\n",
@@ -28,12 +71,27 @@
     "    img_array.append(img)\n",
     " \n",
     " \n",
-    "out = cv2.VideoWriter('./result.mp4',cv2.VideoWriter_fourcc(*'DIVX'), resultFps, size)\n",
+    "out = cv2.VideoWriter('./temp.mp4',cv2.VideoWriter_fourcc(*'DIVX'), resultFps, size)\n",
     " \n",
     "for i in range(len(img_array)):\n",
     "    out.write(img_array[i])\n",
-    "out.release()"
+    "out.release()\n",
+    "\n",
+    "videoclip = VideoFileClip('./temp.mp4')\n",
+    "audioclip = AudioFileClip('./sample.mp4')\n",
+    "videoclip.audio = audioclip\n",
+    "videoclip.write_videofile(\"./result.mp4\")\n",
+    "os.remove('./temp.mp4')\n",
+    "print(\"end\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8d6f90e7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
