--- a/face_de-identification/PlusImage.ipynb
+++ b/face_de-identification/PlusImage.ipynb
@@ -10,27 +10,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "./faces/100000_face0.jpg\n",
-      "100\n",
-      "200\n",
-      "./faces/100000_face1.jpg\n",
-      "500\n",
-      "300\n",
-      "./faces/100000_face2.jpg\n",
-      "900\n",
-      "400\n",
-      "./faces/100001_face0.jpg\n",
-      "100\n",
-      "200\n",
-      "./faces/100001_face1.jpg\n",
-      "500\n",
-      "300\n",
-      "./faces/100002_face0.jpg\n",
-      "100\n",
-      "200\n",
-      "./faces/100002_face1.jpg\n",
-      "500\n",
-      "300\n"
+      "./faces/100000_face0.jpg 0 0 200 200\n",
+      "./faces/100000_face1.jpg 500 300 200 200\n",
+      "./faces/100000_face2.jpg 1289 248 167 185\n",
+      "./faces/100001_face0.jpg 100 200 200 200\n",
+      "./faces/100001_face1.jpg 500 300 200 200\n",
+      "./faces/100002_face0.jpg 100 200 200 200\n",
+      "./faces/100002_face1.jpg 500 300 200 200\n"
      ]
     }
    ],
@@ -42,7 +28,10 @@
     "output data : 100000+N.jpg\n",
     "\"\"\"\n",
     "import cv2\n",
+    "import numpy as np\n",
     "import os.path                 \n",
+    "from PIL import Image\n",
+    "\n",
     "\n",
     "i=0\n",
     "\n",
@@ -59,15 +48,39 @@
     "        faceName=\"./faces/\"+str(fileNum)+\"_face\"+str(j)+\".jpg\"\n",
     "        if not os.path.isfile(faceName):\n",
     "            break\n",
-    "        print(faceName)\n",
     "        x=int(f.readline())\n",
     "        y=int(f.readline())\n",
-    "        print(x)\n",
-    "        print(y)\n",
+    "        width=int(f.readline())\n",
+    "        height=int(f.readline())\n",
+    "        print(faceName,x,y,width,height)\n",
     "        face = cv2.imread(faceName, 1)\n",
+    "        face=cv2.resize(face,dsize=(width,height),interpolation=cv2.INTER_AREA)\n",
     "        h, w, c = face.shape\n",
     "        roi = img[y:y+h, x:x+w]\n",
-    "        img[y:y+h, x:x+w] = face\n",
+    "       \n",
+    "        img1 = face\n",
+    "        img2 = roi\n",
+    "        height1, width1 = img1.shape[:2]\n",
+    "        height2, width2 = img2.shape[:2]\n",
+    "        x = (width2 - width1)//2\n",
+    "        y = height2 - height1\n",
+    "        w = x + width1\n",
+    "        h = y + height1\n",
+    "        chromakey = img1[:10, :10, :]\n",
+    "        offset = 20\n",
+    "        hsv_chroma = cv2.cvtColor(chromakey, cv2.COLOR_BGR2HSV)\n",
+    "        hsv_img = cv2.cvtColor(img1, cv2.COLOR_BGR2HSV)\n",
+    "        chroma_h = hsv_chroma[:,:,0]\n",
+    "        lower = np.array([chroma_h.min()-offset, 100, 100])\n",
+    "        upper = np.array([chroma_h.max()+offset, 255, 255])\n",
+    "        mask = cv2.inRange(hsv_img, lower, upper)\n",
+    "        mask_inv = cv2.bitwise_not(mask)\n",
+    "        roi = img2[y:h, x:w]\n",
+    "        fg = cv2.bitwise_and(img1, img1, mask=mask_inv)\n",
+    "        bg = cv2.bitwise_and(roi, roi, mask=mask)\n",
+    "        img2[y:h, x:w] = fg + bg\n",
+    "        face=img2\n",
+    "        #img[y:y+h, x:x+w] = face\n",
     "        j+=1    \n",
     "    cv2.imwrite(fileName, img)   \n",
     "    i+=1\n",
